[tool.poetry]
name = "mainproject"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
cherrypy = "^18.6.0"
pandas = "^1.0.5"
numpy = "^1.19.0"
paho-mqtt = "^1.5.0"
requests = "^2.24.0"
matplotlib = "^3.2.2"
python-telegram-bot = "^12.8"
PyQt5 = "^5.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
