[tool.poetry]
name = "smartgarden"
version = "0.1.0"
description = "IoT for smart gardening. Programming for IoT applications. Politecnico di Torino. ICT4SS."
authors = [
    "paolo-26 <paolo.1995@ymail.com>",
    "jackrende",
    "haraldmeister <edo.fassio@gmail.com>",
    "marzia1810"
]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/iotprojectMPEG/smartgarden"
documentation = "https://github.com/iotprojectMPEG/smartgarden"
homepage = "https://github.com/iotprojectMPEG/smartgarden"

[tool.poetry.dependencies]
python = "^3.6"
cherrypy = "18.6.0"
paho-mqtt = "1.5.0"
pyqt5 = "5.14"
matplotlib = "3.2.1"
python-telegram-bot = "11.1.0"
requests = "2.23.0"
numpy = "^1.19.0"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
